@@ -4,43 +4,23 @@ import groovy.transform.InheritConstructors
 
 @InheritConstructors
 class ZeppelinProject extends Project {
-    public List testResults = []
-    private Map checkoutDetails
-    private Boolean isMember
     private String mavenBaseCommand = [
-            'export MAVEN_OPTS="-XX:+UnlockExperimentalVMOptions ' +
-                    '-XX:+UseCGroupMemoryLimitForHeap ${MAVEN_OPTS}" &&',
             'mvn -U -B -e',
             '-s ${MAVEN_SETTINGS}'
     ].findAll().join(' ')
 
-    protected List getPlatforms() {
-        return [
-                [name: 'linux-x86_64-generic']
-        ]
-    }
-
-    private boolean release = false
-    private String releaseBranchPattern = /^skymind-[\d.]+-skil-[\d.]+?[-]?[\w]+$/
+    protected static releaseBranchPattern = /^skymind-[\d.]+-skil-[\d.]+?[-]?[\w]+$/
 
     void initPipeline() {
-        String platform = getPlatforms()[0].name
-
-        script.node(platform) {
-            try {
+        script.node(platforms[0].name) {
+            pipelineWrapper {
                 script.container('jnlp') {
                     try {
                         script.stage('Checkout') {
-                            script.checkout script.scm
+                            runCheckout('skymindio')
+                        }
 
-                            checkoutDetails = parseCheckoutDetails()
-                            isMember = isMemberOrCollaborator(checkoutDetails.GIT_COMMITER_NAME, 'skymindio')
-
-                            script.notifier.sendSlackNotification jobResult: 'STARTED',
-                                    checkoutDetails: checkoutDetails, isMember: isMember
-
-                            release = branchName ==~ releaseBranchPattern
-
+                        script.stage('Fetch skil-server sources') {
                             script.dir('skil-server') {
                                 script.git branch: 'develop/1.2.1',
                                         changelog: false,
@@ -75,7 +55,6 @@ class ZeppelinProject extends Project {
                                     mavenBaseCommand,
                                     'clean',
                                     (release) ? 'deploy' : 'install',
-//                                    'install',
                                     '-P build-distr',
                                     '-P scala-2.10',
                                     '-P spark-1.6',
@@ -100,6 +79,7 @@ class ZeppelinProject extends Project {
                         ])
 
                         script.cleanWs deleteDirs: true
+
                         // FIXME: Workaround to clean workspace
                         script.dir("${script.env.WORKSPACE}@tmp") {
                             script.deleteDir()
@@ -113,47 +93,6 @@ class ZeppelinProject extends Project {
                     }
                 }
             }
-            catch (error) {
-                if (script.currentBuild.rawBuild.getAction(jenkins.model.InterruptedBuildAction.class) ||
-                        error instanceof org.jenkinsci.plugins.workflow.steps.FlowInterruptedException ||
-                        error instanceof java.lang.InterruptedException ||
-                        (error instanceof hudson.AbortException &&
-                                (error?.message?.contains('script returned exit code 143') ||
-                                        error?.message?.contains('Queue task was cancelled')))
-                ) {
-                    script.currentBuild.result = 'ABORTED'
-                } else {
-                    script.currentBuild.result = 'FAILURE'
-                }
-
-                script.echo "[ERROR] ${error}" +
-                        (error.cause ? '\n' + "Cause is ${error.cause}" : '') +
-                        (error.stackTrace ? '\n' + 'StackTrace: ' + error.stackTrace.join('\n') : '')
-            }
-            finally {
-                script.notifier.sendSlackNotification jobResult: script.currentBuild.result,
-                        checkoutDetails: checkoutDetails, isMember: isMember, testResults: testResults
-            }
         }
-    }
-
-    private String parseTestResults(testResults) {
-        String testResultsDetails = ''
-
-        if (testResults != null) {
-            def total = testResults.totalCount
-            def failed = testResults.failCount
-            def skipped = testResults.skipCount
-            def passed = total - failed - skipped
-
-            testResultsDetails += ("Total: " + total)
-            testResultsDetails += (", Passed: " + passed)
-            testResultsDetails += (", Failed: " + failed)
-            testResultsDetails += (", Skipped: " + skipped)
-        } else {
-            testResultsDetails = 'No test results found'
-        }
-
-        return testResultsDetails
     }
 }
